# TinyMemoryPool

./: .gitignore  CMakeLists.txt  README.md
include/TinyMemoryPool/: Allocator.h  Config.h
include/TinyMemoryPool/Detail/: MemoryApi.h
src/internal/: Common.h  MemoryApi.cpp  MemoryManager.cpp  MemoryManager.h  PlatformMemory.h  Pool.cpp  Pool.h  PoolManager.cpp  PoolManager.h
src/internal/backends/: PosixMemory.h  WindowsMemory.h
tests/: main.cpp
